--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "dayjs": "^1.11.13",
     "json-server": "^1.0.0-beta.3",
+    "lucide-vue-next": "^0.474.0",
     "pinia": "^2.3.1",
     "tailwindcss": "^4.0.3",
     "vue": "^3.5.13",
